# napari-listener

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_listener/: __init__.py  _actions.py  _app_model_handler.py  _widget.py  napari.yaml
src/napari_listener/_tests/: test_widget.py
