[metadata]
name = napari-listener

description = Control napari via local socket.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aganders3/napari-listener
author = Ashley Anderson
author_email = aandersoniii@chanzuckerberg.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/aganders3/napari-listener/issues
    Documentation = https://github.com/aganders3/napari-listener#README.md
    Source Code = https://github.com/aganders3/napari-listener
    User Support = https://github.com/aganders3/napari-listener/issues

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
install_requires =
    napari
    qtpy

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-listener = napari_listener:napari.yaml

[options.extras_require]
testing =
    tox
    pytest
    pytest-cov
    pytest-qt
    pyqt5

[options.package_data]
* = *.yaml
